<resources>
    <string name="app_name">Movie App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_message">Please, log in or sign up to continue. Have Fun!</string>
    <string name="home">Home</string>
    <string name="acc">Account</string>
    <string name="fav">Favourite</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="movie">movie</string>
    <string name="movieInfo">Movie Info :</string>
    <string name="rel_date">ReleaseDate: </string>
    <string name="rating">Rating:</string>
    <string name="overview">Overview :</string>
    <string name="id">id</string>
    <string name="favList">Favourite List</string>
    <string name="movList">Movie List</string>
    <string name="advert">Advertisement</string>
</resources>