<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".authorization.WelcomeFragment"
    android:padding="20dp"
    android:layout_margin="20dp"
    android:layout_gravity="center_vertical"
    android:background="@drawable/card"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp"
    app:cardMaxElevation="0dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card">

        <TextView
            android:id="@+id/app_name"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="55sp"
            android:textColor="@color/dark_1"
            android:gravity="center"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_name"
            android:text="@string/welcome"
            android:textSize="40sp"
            android:textColor="@color/dark_1"
            android:gravity="center"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/welcomeTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome"
            android:layout_marginHorizontal="70dp"
            android:text="@string/welcome_message"
            android:textSize="20sp"
            android:textColor="@color/dark_1"
            android:gravity="center"
            android:layout_marginBottom="40dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcomeTxt"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="15dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:textColor="@color/light"
                android:textAllCaps="false"
                android:background="@drawable/button_dark"
                android:layout_marginRight="10dp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/signup"
                android:layout_marginLeft="10dp"
                android:textAllCaps="false"
                android:textColor="@color/light"
                android:background="@drawable/button_dark"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>