<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.authorization.LoginFragment"
    app:cardCornerRadius="8dp"
    android:layout_margin="20dp"
    android:layout_gravity="center_vertical"
    app:cardElevation="0dp"
    app:cardMaxElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="35dp"
        android:paddingVertical="50dp"
        android:background="@drawable/card"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/dark_1"
            android:gravity="center"
            android:textSize="45dp"
            android:layout_marginBottom="20dp">

        </TextView>

        <EditText
            android:id="@+id/uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:padding="15dp"
            android:background="@drawable/card_lighter"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:background="@drawable/card_lighter"
            android:layout_marginBottom="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@drawable/button_dark"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/dark_1"
            android:background="@null"
            />
    </LinearLayout>


</androidx.cardview.widget.CardView>