<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AccountFragment"
    android:paddingBottom="30dp"
    android:layout_margin="5dp"
    android:background="@drawable/card_lighter">

    <!-- TODO: Update blank fragment layout -->
    <View
        android:id="@+id/cat_name"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/solid_light_sharp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc"
            android:textSize="35dp"
            android:layout_gravity="center"
            android:layout_weight="9"
            android:textColor="@color/dark_1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toTopOf="parent"/>


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/logout"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/light"
            android:src="@drawable/baseline_logout_24"
            android:background="@drawable/solid_base"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/cat_name"
        >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_account_circle"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/usersname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textColor="@color/dark_1"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname"

            android:textSize="25dp"
            android:textColor="@color/dark_1"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/useridview">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_alternate_email_24"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"

            android:textSize="25dp"
            android:textColor="@color/dark_1"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/useridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/username">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_grid_3x3_24"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/userid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"

            android:textSize="25dp"
            android:textColor="@color/dark_1"
            android:layout_margin="10dp"/>
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>