<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.MovieDetailActivity"
    android:background="@drawable/solid_base">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgMovie"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/poster_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgMovie"
        android:padding="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvMovieTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="202dp"
                android:text="@string/movie"
                android:textAlignment="center"
                android:textColor="@color/light_2"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvMovieInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/movieInfo"
                android:textColor="@color/light_2"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />

            <TextView
                android:id="@+id/tvMovieDateReleaseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/rel_date"
                android:layout_marginLeft="20dp"
                android:textColor="@color/light_2"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMovieInfo" />

            <TextView
                android:id="@+id/tvMovieDateRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginLeft="20dp"
                android:textColor="@color/light_2"
                android:textSize="12sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvMovieDateReleaseTitle"
                app:layout_constraintStart_toEndOf="@+id/tvMovieDateReleaseTitle" />

            <TextView
                android:id="@+id/tvMovieRatingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:layout_marginLeft="20dp"
                android:textColor="@color/light_2"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMovieDateReleaseTitle" />

            <TextView
                android:id="@+id/tvMovieRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="20dp"
                android:text=""
                android:textColor="@color/light_2"
                android:textSize="12sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvMovieRatingTitle"
                app:layout_constraintStart_toEndOf="@+id/tvMovieRatingTitle" />

            <TextView
                android:id="@+id/tvMovieOverviewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/overview"
                android:textColor="@color/light_2"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMovieRating" />

            <TextView
                android:id="@+id/tvMovieOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text=""
                android:layout_marginLeft="20dp"
                android:textColor="@color/light_2"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMovieOverviewTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <ProgressBar
        android:id="@+id/prgBarMovies"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/light"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>